--- a/LocadoraOleTraining/LocadoraOleTraining/Base.lproj/Main.storyboard
+++ b/LocadoraOleTraining/LocadoraOleTraining/Base.lproj/Main.storyboard
@@ -576,7 +576,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Não recebeu o código?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jt5-uJ-mVj">
-                                        <rect key="frame" x="43.5" y="334.5" width="123" height="27"/>
+                                        <rect key="frame" x="43.5" y="334.5" width="126" height="27"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="27" id="Tul-RF-Qg4"/>
                                         </constraints>
@@ -1287,12 +1287,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="snw-1S-GTA">
-                                <rect key="frame" x="0.0" y="36" width="375" height="582"/>
+                                <rect key="frame" x="0.0" y="43" width="375" height="575"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Buscar filmes..." id="yr9-dT-BAU">
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Buscar filmes..." translucent="NO" id="yr9-dT-BAU">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <color key="barTintColor" red="0.070588235289999995" green="0.59215686270000001" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
                                         <outlet property="delegate" destination="8fc-Uj-v7A" id="bNf-Qt-VLc"/>
@@ -1316,8 +1317,8 @@
                                                                 <constraint firstAttribute="height" constant="180" id="BVU-dI-PYF"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Nome do Filme" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UQ6-NZ-5Og">
-                                                            <rect key="frame" x="158" y="11" width="141" height="13"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome do Filme" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UQ6-NZ-5Og">
+                                                            <rect key="frame" x="158" y="11" width="141" height="12"/>
                                                             <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="10"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -1328,8 +1329,8 @@
                                                             <color key="textColor" red="0.60784313729999995" green="0.63921568630000003" blue="0.61960784310000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Duração Filme " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tuf-bf-Pq4">
-                                                            <rect key="frame" x="172" y="39" width="48" height="12"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duração Filme " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tuf-bf-Pq4">
+                                                            <rect key="frame" x="172" y="36" width="48" height="11"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="48" id="R9k-4V-mBg"/>
                                                             </constraints>
@@ -1379,8 +1380,8 @@
                                                             <nil key="highlightedColor"/>
                                                             <size key="shadowOffset" width="0.0" height="0.0"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ano Filme " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vkS-Uu-Hac">
-                                                            <rect key="frame" x="214" y="39" width="42" height="11"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ano Filme " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vkS-Uu-Hac">
+                                                            <rect key="frame" x="214" y="36" width="42" height="11"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="42" id="4QE-3f-XB5"/>
                                                                 <constraint firstAttribute="height" constant="11" id="mS0-kz-DQy"/>
@@ -1389,8 +1390,8 @@
                                                             <color key="textColor" red="0.67450980390000004" green="0.67843137249999996" blue="0.71372549019999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KDL-u6-5ge">
-                                                            <rect key="frame" x="319" y="5" width="18" height="19"/>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KDL-u6-5ge">
+                                                            <rect key="frame" x="319" y="5" width="18" height="17"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="18" id="AYG-cH-9ED"/>
                                                             </constraints>
@@ -1403,8 +1404,8 @@
                                                                 <constraint firstAttribute="height" constant="1" id="8VU-2I-M0v"/>
                                                             </constraints>
                                                         </view>
-                                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7mm-hu-DHT">
-                                                            <rect key="frame" x="158" y="42" width="6" height="5"/>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7mm-hu-DHT">
+                                                            <rect key="frame" x="158" y="38" width="6" height="7"/>
                                                             <color key="backgroundColor" red="1" green="0.80392156859999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </view>
                                                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="aLf-yn-LUU">
@@ -1520,9 +1521,25 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bqu-Mt-apF">
+                                <rect key="frame" x="0.0" y="43" width="375" height="575"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.96078431369999995" green="0.96470588239999999" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.070588235289999995" green="0.59215686270000001" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="Bqu-Mt-apF" firstAttribute="top" secondItem="3XO-St-wVL" secondAttribute="top" constant="43" id="3AK-LK-mBt"/>
+                            <constraint firstItem="Bqu-Mt-apF" firstAttribute="bottom" secondItem="ECK-iU-Fa7" secondAttribute="bottom" id="3z3-DG-MBy"/>
+                            <constraint firstItem="ECK-iU-Fa7" firstAttribute="trailing" secondItem="Bqu-Mt-apF" secondAttribute="trailing" id="EhL-S9-fhr"/>
+                            <constraint firstItem="Bqu-Mt-apF" firstAttribute="trailing" secondItem="ECK-iU-Fa7" secondAttribute="trailing" id="Ytd-UW-u2k"/>
+                            <constraint firstItem="Bqu-Mt-apF" firstAttribute="leading" secondItem="ECK-iU-Fa7" secondAttribute="leading" id="wjH-qt-f4X"/>
+                            <constraint firstItem="ECK-iU-Fa7" firstAttribute="bottom" secondItem="Bqu-Mt-apF" secondAttribute="bottom" id="yCp-aT-d4b"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ECK-iU-Fa7"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="U8T-Z3-mLg" appends="YES" id="dgs-Zk-ODt"/>
+                        </connections>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="search" selectedImage="search" id="pKJ-tK-amQ">
                         <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1531,6 +1548,7 @@
                         <outlet property="searchBar" destination="yr9-dT-BAU" id="R4j-hH-Emz"/>
                         <outlet property="searchDisplayController" destination="cCv-6u-t6W" id="qWE-9A-lDn"/>
                         <outlet property="searchTableView" destination="snw-1S-GTA" id="VwB-Ng-ddx"/>
+                        <outlet property="viewLoading" destination="Bqu-Mt-apF" id="xD3-vh-ddd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dil-xB-yHY" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1558,6 +1576,11 @@
                         <outlet property="searchResultsDelegate" destination="8fc-Uj-v7A" id="BAD-hB-qTf"/>
                     </connections>
                 </searchDisplayController>
+                <tapGestureRecognizer id="U8T-Z3-mLg">
+                    <connections>
+                        <action selector="tapToHideKeyboard:" destination="8fc-Uj-v7A" id="VZB-WG-5ry"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="5760.8000000000002" y="942.27886056971522"/>
         </scene>
