--- a/LocadoraOleTraining/LocadoraOleTraining/Base.lproj/Main.storyboard
+++ b/LocadoraOleTraining/LocadoraOleTraining/Base.lproj/Main.storyboard
@@ -1780,6 +1780,7 @@
                                             <outlet property="viewBack" destination="nyw-1i-daJ" id="5Ue-vE-OSW"/>
                                             <outlet property="viewNote" destination="T4i-nW-GXt" id="dKQ-TY-kCG"/>
                                             <outlet property="viewYellPoint" destination="koZ-di-T3z" id="LWU-km-7vD"/>
+                                            <segue destination="xgu-cp-Sdh" kind="show" identifier="ShowDetailsSegue" id="sJf-gS-Qa1"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="cellLoading" focusStyle="custom" rowHeight="50" id="79Q-gv-Xcv" customClass="MovieTableViewCell" customModule="LocadoraOleTraining" customModuleProvider="target">
@@ -1841,6 +1842,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gq9-si-ytb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="9372" y="-397.15142428785612"/>
+        </scene>
+        <!--Movie Details View Controller-->
+        <scene sceneID="gWp-Da-ibW">
+            <objects>
+                <viewController id="xgu-cp-Sdh" customClass="MovieDetailsViewController" customModule="LocadoraOleTraining" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yv8-0g-ux4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.070588235289999995" green="0.59215686270000001" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="MNN-UP-EkX"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nS0-xl-A6V" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="10309" y="-394"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="Ur1-nG-5fx">
